--- a/calculator/index.html
+++ b/calculator/index.html
@@ -19,7 +19,7 @@
             <div>
                 <div class="row">
                     <div class="col bg-light">
-                        <input type="text" id="output">
+                        <input type="text" id="output" readonly>
                     </div>
                 </div>
                 <div class="row">
