--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,102 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="app" class="d-flex justify-content-center align-items-center">
-        <div class="calci col-3 p-4">
-            <div class="heading text-center">
-                <h3>Calculator</h3>
-            </div>
-            <div>
-                <div class="row">
-                    <div class="col bg-light">
-                        <input type="text" id="output" readonly>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col button" data-value="AC">
-                        <h4>AC</h4>
-                    </div>
-                    <div class="col button" data-value="pow">
-                        <h4>pow</h4>
-                    </div>
-                    <div class="col button" data-value="%">
-                        <h4>%</h4>
-                    </div>
-                    <div class="col button" data-value="/">
-                        <h4>/</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col button" data-value="7">
-                        <h4>7</h4>
-                    </div>
-                    <div class="col button" data-value="8">
-                        <h4>8</h4>
-                    </div>
-                    <div class="col button" data-value="9">
-                        <h4>9</h4>
-                    </div>
-                    <div class="col button" data-value="*">
-                        <h4>*</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col button" data-value="4">
-                        <h4>4</h4>
-                    </div>
-                    <div class="col button" data-value="5">
-                        <h4>5</h4>
-                    </div>
-                    <div class="col button" data-value="6">
-                        <h4>6</h4>
-                    </div>
-                    <div class="col button" data-value="-">
-                        <h4>-</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col button" data-value="1">
-                        <h4>1</h4>
-                    </div>
-                    <div class="col button" data-value="2">
-                        <h4>2</h4>
-                    </div>
-                    <div class="col button" data-value="3">
-                        <h4>3</h4>
-                    </div>
-                    <div class="col button" data-value="+">
-                        <h4>+</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-6 button" data-value="0">
-                        <h4>0</h4>
-                    </div>
-                    <div class="col button" data-value=".">
-                        <h4>.</h4>
-                    </div>
-                    <div class="col button" data-value="=">
-                        <h4>=</h4>
-                    </div>
-                </div>
-            </div>
+      <div class="calci col-3 p-4">
+        <div class="heading text-center">
+          <h3>Calculator</h3>
         </div>
+        <div>
+          <div class="row">
+            <div class="col bg-light output">
+              <input type="text" id="output" readonly />
+              <p id="expression"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col button" data-value="AC">
+              <h4>AC</h4>
+            </div>
+            <div class="col button" data-value="pow">
+              <h4>pow</h4>
+            </div>
+            <div class="col button" data-value="%">
+              <h4>%</h4>
+            </div>
+            <div class="col button" data-value="/">
+              <h4>/</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col button" data-value="7">
+              <h4>7</h4>
+            </div>
+            <div class="col button" data-value="8">
+              <h4>8</h4>
+            </div>
+            <div class="col button" data-value="9">
+              <h4>9</h4>
+            </div>
+            <div class="col button" data-value="*">
+              <h4>*</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col button" data-value="4">
+              <h4>4</h4>
+            </div>
+            <div class="col button" data-value="5">
+              <h4>5</h4>
+            </div>
+            <div class="col button" data-value="6">
+              <h4>6</h4>
+            </div>
+            <div class="col button" data-value="-">
+              <h4>-</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col button" data-value="1">
+              <h4>1</h4>
+            </div>
+            <div class="col button" data-value="2">
+              <h4>2</h4>
+            </div>
+            <div class="col button" data-value="3">
+              <h4>3</h4>
+            </div>
+            <div class="col button" data-value="+">
+              <h4>+</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-6 button" data-value="0">
+              <h4>0</h4>
+            </div>
+            <div class="col button" data-value=".">
+              <h4>.</h4>
+            </div>
+            <div class="col button" data-value="=">
+              <h4>=</h4>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
     <!-- bootstrap js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
