catchme project added

--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="d-flex justify-content-center align-items-center main-container">
+    <div class="d-flex justify-content-around align-items-center main-container flex-wrap">
         <div class="row">
             <a href="./calculator/index.html">
                 <div class="col-12 card">
                     <h1 class="text-center">calculator</h1>
                     <div>
                         <img src="./images/calci project.PNG" alt="calculator project image">
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="row">
+            <a href="./catchme/index.html">
+                <div class="col-12 card">
+                    <h1 class="text-center">Catch Me!</h1>
+                    <div>
+                        <img src="./images/catchme.PNG" alt="catchme project image">
                     </div>
                 </div>
             </a>
