--- a/to-do list/index.html
+++ b/to-do list/index.html
@@ -26,9 +26,9 @@
         <div class="todos">
             <ul id="todo-list">
                 <li>
-                    <input type="checkbox" id="temp" checked>
+                    <!-- <input type="checkbox" id="temp" checked>
                     <label for="temp">Add Your First To-Do</label>
-                    <i class="fa-solid fa-trash-can" id="delete"></i>
+                    <i class="fa-solid fa-trash-can" id="delete"></i> -->
                 </li>
             </ul>
         </div>
